<resources>
    <string name="app_name">LightsOut</string>
    <string name="action_settings">Settings</string>
    <string name="button_classic">Play</string>
    <string name="button_deluxe">TODO</string>
    <string name="button_how_to_play">How to Play</string>
    <string name="button_about">About</string>
    <string name="lights_out_title">Lights Out!</string>
    <string name="moves_title">Moves:</string>

    <string name="title_activity_start_screen">StartScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start_button">Start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_content">Tiger electronics \"Lights Out!\" made by Ersin(ersin-ertan) and Vincent(vprusso). Hosted on Github.com</string>
    <string name="about_title">About</string>
    <string name="howToPlay_title">How To Play</string>
    <string name="howToPlay_content">The goal is to turn all the lights off, but watch out, each button press will switch the adjacent light\'s state.</string>
    <string name="title_activity_activity_level_select">Level Select</string>
    <string name="title_level">Level </string>



</resources>
