<?xml version="1.0" encoding="utf-8"?>

<android.support.percent.PercentRelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <com.pddstudio.starview.StarView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/menu_screen_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/lights_out_title"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_heightPercent="20%"
        app:layout_widthPercent="100%" />

    <LinearLayout
        android:id="@+id/menu_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/menu_screen_title"
        android:orientation="horizontal"

        >

        <LinearLayout
            android:id="@+id/menu_ll0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <Button
                android:id="@+id/button_play"
                style="@style/AppTheme.ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"


                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:enabled="true"
                android:text="@string/button_classic" />

            <Button
                android:id="@+id/button_howtoplay"
                style="@style/AppTheme.ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"


                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:enabled="true"
                android:text="@string/button_how_to_play" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_ll1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_todo"
                style="@style/AppTheme.ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"


                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:enabled="true"
                android:text="@string/button_deluxe" />

            <Button
                android:id="@+id/button_about"
                style="@style/AppTheme.ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:enabled="true"
                android:text="@string/button_about" />
        </LinearLayout>

    </LinearLayout>

</android.support.percent.PercentRelativeLayout>
